# novaseat-v2

./: .env.example  .gitignore  README.md  docker-compose.yml  prompt.md  pyproject.toml
.claude/: CLAUDE.md
colab/: README.md  requirements.txt  score.py  score_colab.ipynb  train.py  train_colab.ipynb
colab/artifacts/: accounts_seed.csv  feature_columns.json  model.joblib  scaler.joblib  scored_accounts.csv  training_report.json
db/: README.md  init.sql
model/: train.py
scripts/: insert_dummy_account.py  remove_dummy_account.py  run_scoring_notebook.py  seed_db.py  sync_n8n_workflows.py
workflow-n8n/: README.md  workflow1-nightly-model-trigger.json  workflow2-churn-alert-monitor.json  workflow4-weekly-reporting.json  workflow5-simple-risk-email.json
